--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.loading-message {
+  padding-top: 5rem;
+  text-align: center;
+  font-weight: 600;
+  font-size: 2rem;
+  color: #458E8B;
+}
+
+.loading-error-message {
+  color: #dc3545;
+}
